# r2inference

./: .gitignore  .rrconfig  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  meson.build  meson_options.txt  r2inference.pc.in  rr-test-driver.sh
.github/workflows/: tests.yaml
common/: Doxyfile  README.md  autogen.sh  config.sh  logger.sh  rr-indent.sh  rr-test-driver.py  rrconfig.sample
common/linters/: indentation.sh  tests.sh
common/m4/: rr-code-coverage.m4  rr-docs.m4  rr-eval.m4  rr-feature.m4  rr-gst.m4  rr-test.m4  rr-version.m4  rr.m4
common/makeinc/: cuda.mk
docs/: Makefile.am  meson.build
docs/api/: Doxyfile.in  Makefile.am  meson.build
examples/: Makefile.am  list_parameters.cc  meson.build
examples/ncsdk/: Makefile.am  example.cc  list_parameters.cc
examples/r2i/: Makefile.am  classification.cc  list_parameters.cc  mean_std_preprocessing.cc  meson.build  top_sort_postprocessing.cc
examples/r2i/coral/: Makefile.am  inception.cc  meson.build  mobilenetssdv2.cc
examples/r2i/edgetpu/: Makefile.am  inception.cc
examples/r2i/ncsdk/: Makefile.am  detect.cc  example.cc  googlenet.cc  inception.cc  tinyyolo.cc  tinyyolov2.cc
examples/r2i/nnapi/: inception.cc  meson.build
examples/r2i/onnxrt/: Makefile.am  inception.cc  meson.build  yolov2.cc
examples/r2i/onnxrt_acl/: Makefile.am  inception.cc
examples/r2i/onnxrt_openvino/: Makefile.am  inception.cc
examples/r2i/tensorflow/: Makefile.am  googlenet.cc  inception.cc  meson.build  ssd-mobilenet.cc  stb_image_resize.h  tf1-object-detection-api.cc
examples/r2i/tensorrt/: Makefile.am  meson.build  yolov2.cc
examples/r2i/tflite/: Makefile.am  inception.cc  meson.build  stb_image.h
hooks/: pre-commit-hook.sh
linters/: indentation.sh
m4/: rr-check-cuda.m4  rr-example.m4  rr-examples.m4  rr-feature.m4  rr-test.m4
r2i/: Makefile.am  classification.cc  classification.h  datatype.cc  datatype.h  detection.cc  detection.h  engine.cc  engine.h  frameworkmeta.h  frameworks.h  iengine.h  iframe.h  iframeworkfactory.cc  iframeworkfactory.h  iloader.cc  iloader.h  imageformat.cc  imageformat.h  imodel.h  inferenceoutput.h  iparameters.h  ipostprocessing.h  iprediction.h  ipreprocessing.h  loader.cc  loader.h  meson.build  parametermeta.h  prediction.cc  prediction.h  predictionclassification.cc  predictionclassification.h  predictiondecorator.cc  predictiondecorator.h  predictiondetection.cc  predictiondetection.h  r2i.cc  r2i.h  runtime_error.h  (+2 more)
r2i/coral/: Makefile.am  engine.cc  engine.h  frameworkfactory.cc  frameworkfactory.h  meson.build
r2i/edgetpu/: Makefile.am  engine.cc  engine.h  frameworkfactory.cc  frameworkfactory.h  meson.build  parameters.cc  parameters.h
r2i/ncsdk/: Makefile.am  engine.cc  engine.h  frame.cc  frame.h  frameworkfactory.cc  frameworkfactory.h  loader.cc  loader.h  model.cc  model.h  parameteraccessors.cc  parameteraccessors.h  parameters.cc  parameters.h  prediction.cc  prediction.h  statuscodes.cc  statuscodes.h
r2i/nnapi/: engine.cc  engine.h  frameworkfactory.cc  frameworkfactory.h  meson.build
r2i/onnxrt/: Makefile.am  engine.cc  engine.h  frame.cc  frame.h  frameworkfactory.cc  frameworkfactory.h  loader.cc  loader.h  meson.build  model.cc  model.h  parameteraccessors.cc  parameteraccessors.h  parameters.cc  parameters.h  prediction.cc  prediction.h
r2i/onnxrt_acl/: Makefile.am  engine.cc  engine.h  frameworkfactory.cc  frameworkfactory.h  meson.build
r2i/onnxrt_openvino/: Makefile.am  engine.cc  engine.h  frameworkfactory.cc  frameworkfactory.h  meson.build  parameteraccessors.cc  parameteraccessors.h  parameters.cc  parameters.h
r2i/postprocessing/: Makefile.am  meson.build  parse_bounding_boxes_tinyyolov2.cc  parse_bounding_boxes_tinyyolov2.h  top_sort_postprocessing.cc  top_sort_postprocessing.h
r2i/preprocessing/: Makefile.am  mean_std_preprocessing.cc  mean_std_preprocessing.h  meson.build  normalize.cc  normalize.h  normalize_facenetv1.cc  normalize_facenetv1.h  normalize_inceptionv1.cc  normalize_inceptionv1.h  normalize_inceptionv3.cc  normalize_inceptionv3.h  normalize_resnet50v1.cc  normalize_resnet50v1.h  normalize_tinyyolov2.cc  normalize_tinyyolov2.h  normalize_tinyyolov3.cc  normalize_tinyyolov3.h
r2i/tensorflow/: Makefile.am  engine.cc  engine.h  frame.cc  frame.h  frameworkfactory.cc  frameworkfactory.h  loader.cc  loader.h  meson.build  model.cc  model.h  parameters.cc  parameters.h  prediction.cc  prediction.h  statuscodes.cc  statuscodes.h
r2i/tensorflowlite/: Makefile.am  loader.cc  loader.h  model.cc  model.h
r2i/tensorrt/: Makefile.am  engine.cc  engine.h  frame.cc  frame.h  frameworkfactory.cc  frameworkfactory.h  loader.cc  loader.h  meson.build  model.cc  model.h  parameters.cc  parameters.h  prediction.cc  prediction.h
r2i/tflite/: Makefile.am  engine.cc  engine.h  frame.cc  frame.h  frameworkfactory.cc  frameworkfactory.h  loader.cc  loader.h  meson.build  model.cc  model.h  parameters.cc  parameters.h  prediction.cc  prediction.h
tests/: Makefile.am  meson.build
tests/unit/: Makefile.am  meson.build
tests/unit/r2i/: Makefile.am  classification.cc  detection.cc  engine.cc  iframeworkfactory.cc  loader.cc  meson.build  prediction.cc  predictionclassification.cc  predictiondecorator.cc  predictiondetection.cc  r2i.cc  tests.cc
tests/unit/r2i/ncsdk/: Makefile.am  engine.cc  frame.cc  frameworkfactory.cc  loader.cc  model.cc  parameters.cc  prediction.cc  tests.cc
tests/unit/r2i/onnxrt/: Makefile.am  engine.cc  frame.cc  frameworkfactory.cc  loader.cc  meson.build  model.cc  parameters.cc  prediction.cc
tests/unit/r2i/onnxrt_openvino/: Makefile.am  meson.build  parameters.cc
tests/unit/r2i/postprocessing/: Makefile.am  meson.build  top_sort_postprocessing.cc
tests/unit/r2i/preprocessing/: Makefile.am  mean_std_preprocessing.cc  meson.build  normalize.cc  normalize_facenetv1.cc  normalize_inceptionv1.cc  normalize_inceptionv3.cc  normalize_resnet50v1.cc  normalize_tinyyolov2.cc  normalize_tinyyolov3.cc
tests/unit/r2i/tensorflow/: Makefile.am  engine.cc  frame.cc  frameworkfactory.cc  loader.cc  (+4 more)
(+22 files in other folders)
