# Copyright (C) 2020 RidgeRun, LLC (http://www.ridgerun.com)
# All Rights Reserved.
#
# The contents of this software are proprietary and confidential to RidgeRun,
# LLC.  No part of this program may be photocopied, reproduced or translated
# into another programming language without prior written consent of
# RidgeRun, LLC.  The user is free to modify the source code after obtaining
# a software license from RidgeRun.  All source code changes must be provided
# back to RidgeRun without any encumbrance.

# Feature options
option('enable-tests', type : 'feature', value : 'auto', yield : true, description : 'Build tests')
option('enable-examples', type : 'feature', value : 'auto', yield : true, description : 'Build examples')
option('enable-gtk-doc', type : 'boolean', value : false, description : 'Use gtk-doc to build documentation')
option('enable-profiling', type : 'feature', value : 'disabled', yield : true, description: 'Enable profiling building')

# Common options
option('package-name', type : 'string', yield : true,
       description : 'Package name to use in plugins')
option('package-origin', type : 'string', value : 'Unknown package origin', yield : true,
       description : 'Package origin URL to use in plugins')

# Enable support for different backends
option('enable-tensorflow', type : 'boolean', value: false,
       description : 'Enable Tensorflow backend support')
option('enable-tflite', type : 'boolean', value: false,
       description : 'Enable Tensorflow Lite backend support')
