# Copyright (C) 2020 RidgeRun, LLC (http://www.ridgerun.com)

# Feature options
option('enable-tests', type : 'feature', value : 'enabled', yield : true, description : 'Build tests')
option('enable-examples', type : 'feature', value : 'enabled', yield : true, description : 'Build examples')
option('enable-docs', type : 'feature', value : 'enabled', yield : true, description : 'Build documentation with Doxygen')

# Enable support for different backends
option('enable-edgetpu', type : 'boolean', value: false,
       description : 'Enable EdgeTPU backend support. This backend needs to have the TFLite backend enabled.')
option('enable-tensorflow', type : 'boolean', value: false,
       description : 'Enable Tensorflow backend support')
option('enable-tflite', type : 'boolean', value: false,
       description : 'Enable Tensorflow Lite backend support')
option('enable-tensorrt', type : 'boolean', value: false,
       description : 'Enable TensorRT backend support')
option('enable-onnxrt', type : 'boolean', value: false,
       description : 'Enable ONNX Runtime backend support')
